Filter events by room, add query params to openapi
